--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -4,6 +4,9 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="SCME.Service.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SCME.Service.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
 
   <system.serviceModel>
@@ -201,7 +204,7 @@
         <value>True</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME008</value>
+        <value>MME002</value>
       </setting>
       <setting name="QrrTqNode" serializeAs="String">
         <value>10</value>
@@ -229,4 +232,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
+  <userSettings>
+    <SCME.Service.Properties.Settings>
+      <setting name="TOUEmulation" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="TOUNode" serializeAs="String">
+        <value>11</value>
+      </setting>
+    </SCME.Service.Properties.Settings>
+  </userSettings>
 </configuration>
