--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -56,121 +56,124 @@
   </startup>
   <applicationSettings>
     <SCME.UI.Properties.Settings>
-        <setting name="GateIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="SLIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="BvtIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="CommIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="ExitButtonIsVisible" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="ScrollBarButtonIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="IsAnimationEnabled" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="TechPassword" serializeAs="String">
-            <value>1234</value>
-        </setting>
-        <setting name="Localization" serializeAs="String">
-            <value>ru-RU</value>
-        </setting>
-        <setting name="PlotUserSL" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="PlotUserGate" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="PlotUserBVT" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="IsTechPasswordEnabled" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="KeyboardsPath" serializeAs="String">
-            <value>KeyboardLayouts\Keyboards.xml</value>
-        </setting>
-        <setting name="BVTVoltageFrequency" serializeAs="String">
-            <value>50</value>
-        </setting>
-        <setting name="SinglePositionModuleMode" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="FTDIPresent" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="CommExIsVisible" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="IgnoreSC" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="RunExplorer" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="AccountsPath" serializeAs="String">
-            <value>AccountsConfig\Accounts.xml</value>
-        </setting>
-        <setting name="FTDIIsInUse" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="ClampIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="NormalWindow" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="UseVTMPostProcessing" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="StoragePath" serializeAs="String">
-            <value>LocalStorage\Storage.xml</value>
-        </setting>
-        <setting name="dVdtIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="IsHeighMeasureEnable" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="ClampWithSlidingDevice" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="ATUIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="QrrTqIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="PlotUserQrrTq" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="RACIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="IHIsVisible" serializeAs="String">
-            <value>True</value>
-        </setting>
-        <setting name="SpecialMeasureForUse" serializeAs="String">
-            <value>False</value>
-        </setting>
-        <setting name="MMECode" serializeAs="String">
-            <value>MME008</value>
-        </setting>
+      <setting name="GateIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SLIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="BvtIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CommIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ExitButtonIsVisible" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ScrollBarButtonIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="IsAnimationEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="TechPassword" serializeAs="String">
+        <value>1234</value>
+      </setting>
+      <setting name="Localization" serializeAs="String">
+        <value>ru-RU</value>
+      </setting>
+      <setting name="PlotUserSL" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PlotUserGate" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PlotUserBVT" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="IsTechPasswordEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="KeyboardsPath" serializeAs="String">
+        <value>KeyboardLayouts\Keyboards.xml</value>
+      </setting>
+      <setting name="BVTVoltageFrequency" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="SinglePositionModuleMode" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="FTDIPresent" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CommExIsVisible" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="IgnoreSC" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="RunExplorer" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AccountsPath" serializeAs="String">
+        <value>AccountsConfig\Accounts.xml</value>
+      </setting>
+      <setting name="FTDIIsInUse" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ClampIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="NormalWindow" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UseVTMPostProcessing" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="StoragePath" serializeAs="String">
+        <value>LocalStorage\Storage.xml</value>
+      </setting>
+      <setting name="dVdtIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="IsHeighMeasureEnable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ClampWithSlidingDevice" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ATUIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="QrrTqIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="PlotUserQrrTq" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="RACIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="IHIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SpecialMeasureForUse" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="MMECode" serializeAs="String">
+        <value>MME008</value>
+      </setting>
     </SCME.UI.Properties.Settings>
   </applicationSettings>
   <userSettings>
     <SCME.UI.Properties.Settings>
-        <setting name="ReadOnlyProfiles" serializeAs="String">
-            <value>False</value>
-        </setting>
+      <setting name="ReadOnlyProfiles" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="TOUIsVisible" serializeAs="String">
+        <value>True</value>
+      </setting>
     </SCME.UI.Properties.Settings>
   </userSettings>
 </configuration>
