--- a/SCME.Service/SCME.SERVICE.csproj
+++ b/SCME.Service/SCME.SERVICE.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="BroadcastCommunication.cs" />
     <Compile Include="IO\IOATU.cs" />
+    <Compile Include="IO\IOTOU.cs" />
     <Compile Include="IO\IOdVdt.cs" />
     <Compile Include="IO\IoIH.cs" />
     <Compile Include="IO\IOQrrTq.cs" />
