--- a/SCME.Types/SCME.TYPES.csproj
+++ b/SCME.Types/SCME.TYPES.csproj
@@ -20,7 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -113,6 +113,7 @@
     <Compile Include="SCTU\SctuTestResult.cs" />
     <Compile Include="SL\HALTypeSL.cs" />
     <Compile Include="SL\TypeSL.cs" />
+    <Compile Include="TOU\TypeTOU.cs" />
     <Compile Include="Utils\LogJournal.cs" />
   </ItemGroup>
   <ItemGroup>
