--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -111,7 +111,10 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="MMECode" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">MME002</Value>
+      <Value Profile="(Default)">MME008</Value>
+    </Setting>
+    <Setting Name="TOUIsVisible" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
