Бинарник с новой логикой IOTOU
Горячая правка IOTOU и небольшие изменения для профилей

--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -51,7 +51,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="FTDIPresent" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="CommExIsVisible" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
