--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -95,7 +95,7 @@
         <value>True</value>
       </setting>
       <setting name="FTDIPresent" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="CommExIsVisible" serializeAs="String">
         <value>False</value>
