--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -114,10 +114,10 @@
         <value>True</value>
       </setting>
       <setting name="DisableResultDB" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="CommutationEmulation" serializeAs="String">
         <value>True</value>
@@ -204,7 +204,7 @@
         <value>True</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME002</value>
+        <value>MME005</value>
       </setting>
       <setting name="QrrTqNode" serializeAs="String">
         <value>10</value>
