--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -24,7 +24,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="TechPassword" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">1234</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Localization" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ru-RU</Value>
@@ -111,7 +111,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="MMECode" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">MME008</Value>
+      <Value Profile="(Default)">MME005</Value>
     </Setting>
     <Setting Name="TOUIsVisible" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
