--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -68,7 +68,7 @@
         <value>False</value>
       </setting>
       <setting name="TechPassword" serializeAs="String">
-        <value>1234</value>
+        <value />
       </setting>
       <setting name="Localization" serializeAs="String">
         <value>ru-RU</value>
@@ -152,7 +152,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME008</value>
+        <value>MME005</value>
       </setting>
     </SCME.UI.Properties.Settings>
   </applicationSettings>
