Убрал костыль миграции в файле SQLiteSaveProfileService Добавил миграцию в начало запуска сервера Удалил копипаст с DatabaseService теперь наполнение полей храниться только в SQLDatabaseService. Создал класс который можно применять как для миграция SQL так и SQLite В интерфейс IDatabaseService добавил метод миграции Для миграции пришлось добавить в Service ссылку на InterfaceImplementations

--- a/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
+++ b/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
@@ -66,6 +66,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackGround.cs" />
+    <Compile Include="MigratorInserter.cs" />
+    <Compile Include="MigratorInserterTemplate.cs" />
     <Compile Include="SQLDatabaseService.cs" />
     <Compile Include="SQLCentralDatabaseService.cs" />
     <Compile Include="DatabaseService.cs" />
