--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -1,10 +1,10 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="SCME.Service.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="SCME.Service.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="SCME.Service.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -13,7 +13,7 @@
 
     <bindings>
       <netTcpBinding>
-        <binding name="DefaultTcpBinding" receiveTimeout="00:25:00" sendTimeout="00:25:00"  maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647"  maxConnections="100">
+        <binding name="DefaultTcpBinding" receiveTimeout="00:25:00" sendTimeout="00:25:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxConnections="100">
           <security mode="None">
             <transport clientCredentialType="None" />
             <message clientCredentialType="None" />
@@ -30,29 +30,23 @@
       <endpointBehaviors>
         <behavior name="DefaultClientEndpointBehavior">
           <callbackDebug includeExceptionDetailInFaults="true" />
-          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647" />
         </behavior>
       </endpointBehaviors>
     </behaviors>
 
     <services>
       <service name="SCME.Service.ExternalControlServer">
-        <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService" binding="netTcpBinding"  bindingConfiguration="DefaultTcpBinding"
-                  name="ExternalControl" bindingNamespace="" contract="SCME.Types.IExternalControl" />
+        <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="ExternalControl" bindingNamespace="" contract="SCME.Types.IExternalControl" />
       </service>
       <service name="SCME.Service.DatabaseServer">
-        <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-                  name="DatabaseCommunicationInt" bindingNamespace="" contract="SCME.Types.IDatabaseCommunicationService" />
+        <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="DatabaseCommunicationInt" bindingNamespace="" contract="SCME.Types.IDatabaseCommunicationService" />
       </service>
     </services>
 
     <client>
-      <endpoint address="net.tcp://PROTONETX-SERVE:802/SCME/SCME.PrintingService.MME"
-                behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-                contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
-      <endpoint address="net.tcp://192.168.0.134:810/SCME/SCME.IO.CentralDatabaseService"
-               behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-               contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://PROTONETX-SERVE:802/SCME/SCME.PrintingService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
+      <endpoint address="net.tcp://192.168.0.134:810/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
     </client>
 
   </system.serviceModel>
@@ -230,7 +224,7 @@
     </SCME.Service.Properties.Settings>
   </applicationSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <userSettings>
     <SCME.Service.Properties.Settings>
@@ -242,4 +236,16 @@
       </setting>
     </SCME.Service.Properties.Settings>
   </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
