Переделал IOTOU, запуск в режиме эмуляции ведёт себя так же как IORAC. Исправил баги с TOU(не срабатывал handler для ошибки) Добавил TOU на экран оператора Поднял netframework до 4.6.1 Сделал возможность работать локально/централизировано Переработал SQL и SQLITE сервисы сохранения профилей Теперь Profile и ProfileItem содержат помимо своего гуида, гуид следующего поколения, он нужен для того чтобы у каждого нового профиля был одинаковый ключ, как удалённо так и локально (Если использовать Guid.NewGuid() в функции InsertProfileItem то ключи будут разные в базах для одного и того же профиля). Изменил цепочку методов сохранения профилей, теперь она возвращает структуру которая содержит новый профиль. Добавил обновление профилей после сохранения (загрузка нового ключа и версии, плюс генерация ключа следующего поколения)

--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -35,29 +35,41 @@
     </services>
   </system.serviceModel>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
 
   <applicationSettings>
     <SCME.DatabaseServer.Properties.Settings>
       <setting name="DBIntegratedSecurity" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="DbPath" serializeAs="String">
-        <value>tcp:192.168.0.134, 1444</value>
+        <value>False</value>
       </setting>
       <setting name="DBName" serializeAs="String">
         <value>SCME_ResultsDB</value>
       </setting>
-      <setting name="DBUser" serializeAs="String">
-        <value>sa</value>
-      </setting>
       <setting name="DBPassword" serializeAs="String">
-        <value>Hpl1520</value>
+        <value>qwerty_123</value>
       </setting>
       <setting name="LogPathTemplate" serializeAs="String">
         <value>Logs\DatabaseServer_{0}.log</value>
       </setting>
+      <setting name="DbPath" serializeAs="String">
+        <value>IVAN-PC\SQLEXPRESS01</value>
+      </setting>
+      <setting name="DBUser" serializeAs="String">
+        <value>sa</value>
+      </setting>
     </SCME.DatabaseServer.Properties.Settings>
   </applicationSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
