--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -46,7 +46,7 @@
 
     <client>
       <endpoint address="net.tcp://PROTONETX-SERVE:802/SCME/SCME.PrintingService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
-      <endpoint address="net.tcp://192.168.0.134:810/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://127.0.0.1:810/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
     </client>
 
   </system.serviceModel>
@@ -107,8 +107,8 @@
       <setting name="BVTReadGraph" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="DisableResultDB" serializeAs="String">
-        <value>True</value>
+      <setting name="LocalOrCentral" serializeAs="String">
+        <value>False</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>True</value>
