--- a/SCME.Service/Properties/Settings.settings
+++ b/SCME.Service/Properties/Settings.settings
@@ -56,8 +56,8 @@
     <Setting Name="BVTReadGraph" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="DisableResultDB" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+    <Setting Name="LocalOrCentral" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DisableLogDB" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
