Добавил сохранение ошибок TOU, Поправил баг с сохранением результата TOU Тестирую Cache.Net.ReadDevicesFromServer,  выкидывает ошибку

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -111,7 +111,7 @@
         <value>False</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="CommutationEmulation" serializeAs="String">
         <value>True</value>
