Выполнил пункты: Добавить методы в интерфейс WCF Изменить интерфейсный модуль Commutation Unit в Service Добавить кнопку Оператор режим сборки (установка глобального параметра) Добавить в режиме наладчика кнопки управления системой безопасности Добавить в строке состояний отображение какая система безопасности
Немножно отрефакторил MainWindow

Осталось тестирование

--- a/SCME.UI/SCME.UI.csproj
+++ b/SCME.UI/SCME.UI.csproj
@@ -154,7 +154,9 @@
     <Compile Include="IO\FtdiLibrary.cs" />
     <Compile Include="IO\QueueWorker.cs" />
     <Compile Include="KeyboardLayouts.cs" />
-    <Compile Include="ModelViews\TOUPageVM.cs" />
+    <Compile Include="ViewModels\MainWindowVM.cs" />
+    <Compile Include="ViewModels\TOUPageVM.cs" />
+    <Compile Include="ViewModels\UserWorkModePageVM.cs" />
     <Compile Include="PagesTech\TOUPage.xaml.cs">
       <DependentUpon>TOUPage.xaml</DependentUpon>
     </Compile>
