--- a/SCME.Service/Properties/Settings.settings
+++ b/SCME.Service/Properties/Settings.settings
@@ -56,7 +56,7 @@
     <Setting Name="BVTReadGraph" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="LocalOrCentral" Type="System.Boolean" Scope="Application">
+    <Setting Name="IsLocal" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DisableLogDB" Type="System.Boolean" Scope="Application">
