Добавил привязку параметров к property settings в ProfileBuilder. Поправил вывод описания параметра TOU

--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -4,6 +4,9 @@
       <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
           <section name="SCME.ProfileBuilder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
       </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SCME.ProfileBuilder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <system.serviceModel>
     <behaviors>
@@ -48,4 +51,23 @@
       </setting>
     </SCME.ProfileBuilder.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <SCME.ProfileBuilder.Properties.Settings>
+      <setting name="MSSQLServer" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MSSQLDatabase" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MSSQLIntegratedSecurity" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="MSSQLUserId" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SQLiteFileName" serializeAs="String">
+        <value />
+      </setting>
+    </SCME.ProfileBuilder.Properties.Settings>
+  </userSettings>
 </configuration>
