--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -8,5 +8,20 @@
     <Setting Name="CurrentCulture" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ru-RU</Value>
     </Setting>
+    <Setting Name="MSSQLServer" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MSSQLDatabase" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="MSSQLIntegratedSecurity" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="MSSQLUserId" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SQLiteFileName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
