--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -105,7 +105,7 @@
         <value>True</value>
       </setting>
       <setting name="LocalOrCentral" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
